--- a/index.html
+++ b/index.html
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+  <style>
+    img {
+      border-radius: 50%;
+    }
+
+    body {
+      background-color: khaki;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .italic {
+      font-style: italic;
+    }
+  </style>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About me</title>
+    <title>SHADI LAASIRI</title>
   </head>
+
   <body>
-    <h1><em>Shadi L</em></h1>
-    <img
-      src="https://mail.google.com/mail/u/0?ui=2&ik=d8655e4c09&attid=0.1&permmsgid=msg-a:r6501745996555636523&th=188b6802b02e65ee&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ9h98N8mqsXk7dOYgBTtrMi7yaib1LT7uwJCGeGAWtlOW15iN42uM556ws8jNf9vzw_gkvQQmLFZKxuj3Qr_6YsJDhMtWzbsPu-t6PmBGiwC9rZTBWd-Fxh2Pg&disp=emb&realattid=188b67ffde28002c2e71"
-      alt="icstars"
-      width="25%"
-    />
-    <p>I am shadi a intern at i.c.stars</p>
-    this is a test
+    <h1 class="italic">Shadi L</h1>
+    <img src="About me.jpg" alt="icstars" width="20%" height="500" />
+    <h1>I am shadi a intern at i.c.stars</h1>
+    <div>
+      <h1>About me</h1>
+      <article>
+        The person is a <span class="italic">highly motivated</span> and curious
+        individual with a strong passion for technology.<br />
+        They have a deep understanding of computer systems and programming
+        <br />languages, and they constantly stay updated with the latest
+        advancements in the tech industry. They possess excellent
+        problem-solving skills and thrive in a fast-paced and innovative
+        environment.
+      </article>
+      <p><button class="button">Contact</button></p>
+    </div>
+    <h1><em>Favorite Foods</em></h1>
+    <ul>
+      <li><h2>Steak</h2></li>
+      <li><h2>Pizza</h2></li>
+      <li><h2>Waffle fries</h2></li>
+      <li><h2>Tacos</h2></li>
+    </ul>
   </body>
 </html>
